--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:wght@400;500;700&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/* Global */
+@import url("/assets/css/global/global.css");
+@import url("/assets/css/utility/cores.css");
 
-ul {
-  list-style: none;
-}
+/* Header & Footer */
+@import url("/assets/css/global/header.css");
+@import url("/assets/css/global/footer.css");
 
-a {
-  text-decoration: none;
-}
+/* Utilidades */
+@import url("/assets/css/utility/componentes.css");
