--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,6 @@
 
 /* Utilidades */
 @import url("/assets/css/utility/componentes.css");
+
+/* Home */
+@import url("/assets/css/home/introducao.css");
