layout da intro e form

--- a/assets/css/utility/cores.css
+++ b/assets/css/utility/cores.css
@@ -1,9 +1,9 @@
 :root {
   /* cores-de-suporte */
   --cor-s0: #ffffff;
-  --cor-s1: #f0f3f7;
-  --cor-s2: #e1e6ed;
-  --cor-s3: #c3cdd9;
+  --cor-s1: #dbe1e9;
+  --cor-s2: #cdd7e4;
+  --cor-s3: #a4b3c5;
   --cor-s4: #434c59;
   --cor-s5: #2e3743;
   --cor-s6: #171e26;
