--- a/assets/css/home/introducao.css
+++ b/assets/css/home/introducao.css
@@ -4,6 +4,9 @@
 }
 
 .intro-conteudo {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  gap: 40px;
   max-width: 1200px;
   height: 762px;
   background-image: url("/assets/img/bg-intro-90.jpg");
@@ -13,7 +16,7 @@
 
 .intro-conteudo h1{
   max-width: 840px;
-  padding: 160px 0 360px 0;
+  margin-top: 160px;
   font-family: "Amatic SC", serif;
   font-size: 5rem;
   font-weight: bold;
