--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Roboto", Helvetica, sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
   color: var(--cor-s0);
 }
 
