--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:wght@400;500;700&display=swap");
 
 /* Global */
-@import url("/assets/css/global/global.css");
-@import url("/assets/css/utility/cores.css");
+@import url("../../assets/css/global/global.css");
+@import url("../../assets/css/utility/cores.css");
 
 /* Header & Footer */
-@import url("/assets/css/global/header.css");
-@import url("/assets/css/global/footer.css");
+@import url("../../assets/css/global/header.css");
+@import url("../../assets/css/global/footer.css");
 
 /* Utilidades */
-@import url("/assets/css/utility/componentes.css");
+@import url("../../assets/css/utility/componentes.css");
 
 /* Home */
-@import url("/assets/css/home/introducao.css");
-@import url("/assets/css/home/formulario.css");
+@import url("../../assets/css/home/introducao.css");
+@import url("../../assets/css/home/formulario.css");
