--- a/assets/css/home/introducao.css
+++ b/assets/css/home/introducao.css
@@ -8,7 +8,7 @@
   grid-template-columns: 1.5fr 1fr;
   justify-content: space-between;
   gap: 40px;
-  background-image: url("/assets/img/bg-intro.jpg");
+  background-image: url("../../img/bg-intro-2x.jpg");
   background-size: cover;
   background-position: top left;
 }
@@ -24,4 +24,24 @@
 
 .intro-conteudo h1 span {
   color: var(--cor-e3);
+}
+
+@media (max-width: 1000px) {
+  .intro-conteudo {
+    grid-template-columns: 1fr;
+    gap: 0;
+    justify-items: center;
+  }
+  .intro-conteudo h1 {
+    margin: 120px 0 40px 0;
+    font-size: 4.5rem;
+    text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .intro-conteudo h1{
+    margin: 80px 0 30px 0;
+    font-size: 4rem;
+  }
 }
