--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -19,7 +19,7 @@
 }
 
 .header-menu a {
-  display: inline-block;
+  display: block;
   padding: 12px 0;
   line-height: 1.5;
   position: relative;
@@ -39,34 +39,84 @@
   width: 100%;
 }
 
+.btn-mobile {
+  display: none;
+}
+
 @media (max-width: 700px) {
-  .header-conteudo {
-    flex-direction: column;
+  .header-menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: 72px;
+    right: 0px;
+    background-color: var(--cor-b6);
+    transition: 600ms;
+    visibility: hidden;
+    overflow-y: hidden;
+    z-index: 100;
   }
 
-  .header-menu {
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 12px;
+  #nav.active .header-menu {
+    height: calc(100vh - 72px);
+    visibility: visible;
+    overflow-y: auto;
   }
 
   .header-menu a {
-    padding: 4px 8px;
-    border-radius: 4px;
-    background-color: var(--cor-b4);
+    padding: 16px 0;
+    margin: 0 auto;
+    border-bottom: 2px solid var(--cor-b4);
+    text-align: center;
+  }
+
+  .header-menu a:after {
+    display: none;
   }
 
   .header-menu a:hover {
     color: var(--cor-e2);
   }
 
-  .header-menu a:after {
-    display: none;
+  .btn-mobile {
+    display: flex;
+    padding: 8px 16px;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+    gap: 8px;
   }
-}
 
-@media (max-width: 450px) {
-  .header-menu {
-    gap: 10px;
+  .hamburger {
+    display: block;
+    border-top: 2px solid var(--cor-s0);
+    width: 20px;
+  }
+
+  .hamburger::after,
+  .hamburger::before {
+    position: relative;
+    content: "";
+    display: block;
+    width: 20px;
+    height: 2px;
+    background-color: var(--cor-s0);
+    margin-top: 5px;
+    transition: 300ms;
+  }
+
+  #nav.active .hamburger {
+    border-top-color: transparent;
+  }
+
+  #nav.active .hamburger::before {
+    transform: rotate(135deg);
+  }
+
+  #nav.active .hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
   }
 }
