--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,6 @@
 /* Home */
 @import url("../../assets/css/home/introducao.css");
 @import url("../../assets/css/home/formulario.css");
+
+/* Content */
+@import url("../../assets/css/content/sobre.css");
