--- a/assets/css/content/sobre.css
+++ b/assets/css/content/sobre.css
@@ -6,7 +6,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 60px 40px;
-  margin: 60px 0;
+  margin: 60px 0 80px 0;
   padding: 60px 0;
 }
 
@@ -81,6 +81,6 @@
   .sobre-conteudo {
     grid-template-columns: 1fr;
     max-width: 500px;
-    margin: 0 auto;
+    margin: 40px 0 60px 0;
   }
 }
