article projeto finalizado

--- a/assets/css/content/sobre.css
+++ b/assets/css/content/sobre.css
@@ -5,17 +5,18 @@
 .sobre-conteudo {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 60px 40px;
-  margin: 60px 0 80px 0;
+  gap: 40px;
+  margin: 40px 0 60px 0;
   padding: 60px 0;
 }
 
 .sobre-conteudo .titulo {
   position: relative;
-  grid-column: 1/-1;
+  grid-column: 1 / -1;
   justify-self: center;
+  margin-bottom: 20px;
   font-family: "Amatic SC", serif;
-  font-size: 4rem;
+  font-size: 3.75rem;
   line-height: 1.125;
   color: var(--cor-s6);
 }
@@ -32,7 +33,7 @@
   border-radius: 4px;
   background-color: var(--cor-e3);
   position: absolute;
-  top: 72px;
+  top: 68px;
 }
 
 .sobre-descricao {
@@ -59,7 +60,7 @@
 }
 
 .sobre-descricao p {
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 1.5;
   color: var(--cor-s5);
@@ -67,20 +68,21 @@
 
 .sobre-descricao ul {
   font-family: 'Roboto', sans-serif;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 1.5;
   color: var(--cor-s5);
+  list-style: circle;
 }
 
 .sobre-descricao ul li {
-  margin-bottom: 8px;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 800px) {
   .sobre-conteudo {
     grid-template-columns: 1fr;
     max-width: 500px;
-    margin: 40px 0 60px 0;
+    margin: 40px auto 60px auto;
   }
 }
