--- a/assets/css/content/projeto.css
+++ b/assets/css/content/projeto.css
@@ -1,14 +1,100 @@
 .projeto-bg {
-  color: var(--cor-s6);
+  background-image: url("../../img/bg-projeto.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .projeto-conteudo {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+  padding: 100px 20px 120px 20px;
 }
 
 .projeto-conteudo h2 {
-  display: block;
+  position: relative;
   grid-column: 1 / -1;
   justify-self: center;
+  margin-bottom: 20px;
+  font-family: "Amatic SC", serif;
+  font-size: 3.75rem;
+  line-height: 1.125;
+  color: var(--cor-s6);
+}
+
+.projeto-conteudo h2 span {
+  color: var(--cor-e3);
+}
+
+.projeto-conteudo h2::after {
+  content: "";
+  display: block;
+  width: 48px;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--cor-e3);
+  position: absolute;
+  top: 68px;
+}
+
+.projeto-conteudo :nth-child(3) {
+  grid-column: 2;
+  grid-row: 2 / 4;
+}
+
+.projeto-descricao {
+  background-color: var(--cor-s0);
+  padding: 32px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 5px 8px 0 rgba(0, 0, 0, 0.1);
+}
+
+.projeto-descricao h3 {
+  margin-bottom: 32px;
+  font-family: "Amatic SC", serif;
+  font-size: 2.5rem;
+  line-height: 1.125;
+  color: var(--cor-b6);
+}
+
+.projeto-descricao h3 span {
+  color: var(--cor-e3);
+}
+
+.projeto-descricao p {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5;
+  color: var(--cor-s5);
+}
+
+.projeto-descricao ul {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5;
+  color: var(--cor-s5);
+}
+
+.projeto-descricao ul li {
+  margin-bottom: 15px;
+}
+
+.projeto-descricao .programa-item {
+  color: var(--cor-b3);
+}
+
+.projeto-descricao ul li span {
+  color: var(--cor-e3);
+}
+
+@media (max-width: 800px) {
+  .projeto-conteudo {
+    grid-template-columns: 1fr;
+  }
+
+  .projeto-conteudo :nth-child(3) {
+    grid-column: 1;
+    grid-row: 3;
+  }
 }
