--- a/assets/css/content/sobre.css
+++ b/assets/css/content/sobre.css
@@ -1,17 +1,11 @@
-.sobre-bg {
-  background-color: var(--cor-s0);
-}
-
 .sobre-conteudo {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 40px;
+  gap: 60px;
   padding: 100px 20px 120px 20px;
 }
 
 .sobre-conteudo .titulo {
   position: relative;
-  grid-column: 1 / -1;
   justify-self: center;
   margin-bottom: 20px;
   font-family: "Amatic SC", serif;
@@ -35,59 +29,115 @@
   top: 68px;
 }
 
-.sobre-descricao {
-  background-image: url(../../img/bg-sobre-descricao.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top right;
-  padding: 32px;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 5px 8px 0 rgba(0, 0, 0, 0.1);
+.sobre-descricao1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px 60px;
+  max-width: 870px;
+  justify-self: center;
+  text-align: end;
 }
 
-.sobre-descricao h3 {
-  text-align: center;
-  margin-bottom: 32px;
+.sobre-descricao1 .sobre-img {
+  grid-column: 2;
+  grid-row: 1 / 3;
+}
+
+.sobre-descricao2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px 60px;
+  max-width: 870px;
+  justify-self: center;
+}
+
+.sobre-descricao2 .sobre-img {
+  grid-column: 1;
+  grid-row: 1 / 3;
+}
+
+.sobre-item h3 {
+  margin-bottom: 20px;
   font-family: "Amatic SC", serif;
   font-size: 2.5rem;
   line-height: 1.125;
   color: var(--cor-b6);
 }
 
-.sobre-descricao h3 span {
+.sobre-item h3 span {
   color: var(--cor-e3);
 }
 
-.sobre-descricao p {
+.sobre-item p {
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5;
   color: var(--cor-s5);
 }
 
-.sobre-descricao ul {
+.sobre-item ul {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5;
   color: var(--cor-s5);
+  list-style: circle;
+  padding-left: 20px;
 }
 
-.sobre-descricao ul li {
-  margin-bottom: 15px;
+.sobre-item ul li {
+  margin-bottom: 10px;
 }
 
-.sobre-descricao .valor-item {
+.sobre-item .valor-item {
   color: var(--cor-b3);
 }
 
-.sobre-descricao ul li span {
+.sobre-item ul li span {
   color: var(--cor-e3);
 }
 
+@media (max-width: 950px) {
+  .sobre-descricao1 {
+    gap: 40px;
+    text-align: start;
+  }
+  
+  .sobre-descricao1 .sobre-img {
+    grid-column: 1 / 3;
+    grid-row: 2;
+    justify-self: center;
+  }
+
+  .sobre-descricao2 {
+    gap: 40px;
+  }
+  
+  .sobre-descricao2 .sobre-img {
+    grid-column: 1 / 3;
+    grid-row: 2;
+    justify-self: center;
+  }
+}
+
 @media (max-width: 800px) {
-  .sobre-conteudo {
+  .sobre-descricao1 {
+    display: grid;
     grid-template-columns: 1fr;
-    max-width: 500px;
+  }
+  
+  .sobre-descricao1 .sobre-img {
+    grid-column: 1;
+    grid-row: 3 ;
+  }
+
+  .sobre-descricao2 {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  
+  .sobre-descricao2 .sobre-img {
+    grid-column: 1;
+    grid-row: 3 ;
   }
 }
