--- a/assets/css/content/sobre.css
+++ b/assets/css/content/sobre.css
@@ -97,9 +97,17 @@
   color: var(--cor-e3);
 }
 
-@media (max-width: 950px) {
+.sobre-img {
+  align-self: center;
+}
+
+.sobre-img img {
+  border-radius: 8px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 5px 8px 0 rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 900px) {
   .sobre-descricao1 {
-    gap: 40px;
     text-align: start;
   }
   
@@ -107,10 +115,6 @@
     grid-column: 1 / 3;
     grid-row: 2;
     justify-self: center;
-  }
-
-  .sobre-descricao2 {
-    gap: 40px;
   }
   
   .sobre-descricao2 .sobre-img {
