--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,4 @@
 /* Content */
 @import url("../../assets/css/content/sobre.css");
 @import url("../../assets/css/content/projeto.css");
+@import url("../../assets/css/content/atividades.css");
