--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -1,5 +1,10 @@
 .header-bg {
   background-color: var(--cor-b6);
+  position: fixed;
+  top: 0;          
+  left: 0;         
+  right: 0;        
+  z-index: 100;
 }
 
 .header-conteudo {
