Fim do projeto da atividade extensionista

--- a/assets/css/content/atividades.css
+++ b/assets/css/content/atividades.css
@@ -1,8 +1,10 @@
 .atividades-conteudo {
+  max-width: 1200px;
+  padding: 0 20px;
+  margin: 0 auto;
   display: grid;
   gap: 40px;
-  padding: 90px 20px 120px 20px;
-  margin-top: 10px;
+  padding: 100px 20px 120px;
 }
 
 .atividades-conteudo .titulo {
@@ -63,6 +65,8 @@
   border-radius: 8px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 5px 8px 0 rgba(0, 0, 0, 0.1);
 }
+
+/* Responsividade */
 
 @media (max-width: 950px) {
   .atividades-imagens {
