--- a/assets/css/global/header.css
+++ b/assets/css/global/header.css
@@ -8,6 +8,9 @@
 }
 
 .header-conteudo {
+  max-width: 1200px;
+  padding: 0 20px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,7 +22,6 @@
 
 .header-menu {
   display: flex;
-  flex-wrap: wrap;
   gap: 40px;
 }
 
@@ -47,6 +49,8 @@
 .btn-mobile {
   display: none;
 }
+
+/* Responsividade */
 
 @media (max-width: 800px) {
   .header-menu {
