--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,8 @@
+/* Importe das Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:wght@400;500;700&display=swap");
 
-/* Global */
+/* Global, Header e Footer */
 @import url("../../assets/css/global/global.css");
-
-/* Utilidades */
-@import url("../../assets/css/utility/componentes.css");
-
-/* Header & Footer */
 @import url("../../assets/css/global/header.css");
 @import url("../../assets/css/global/footer.css");
 
